--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -14,6 +14,7 @@
   "content_scripts": [{
     "js": ["jquery.js", "main.js"],
     "css": ["style.css"],
+    "json": ["example.json"],
     "matches": ["*://*.foursquare.com/v/*"]
   }],
   "manifest_version": 2
