Added smart relative dates (ex. 6 months ago instead of 7/21/2012)

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -12,9 +12,8 @@
     "default_icon": "icon.png"
   },
   "content_scripts": [{
-    "js": ["jquery.js", "main.js"],
+    "js": ["jquery.js", "main.js", "moment.min.js"],
     "css": ["style.css"],
-    "json": ["example.json"],
     "matches": ["*://*.foursquare.com/v/*"]
   }],
   "manifest_version": 2
