--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "DineSafeTO — DineSafe rating ",
+  "name": "DineSafeTO — DineSafe in your FourSquare ",
   "version": "0.1",
   "description": "Let's you view Toronto DineSafe data in FourSquare — automagically! ",
 
